--- a/edit.html
+++ b/edit.html
@@ -5,6 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Dynamic Script Content</title>
 		<link href="./styles.css" rel="stylesheet" />
+		<!-- Favicon grabbed from zdist (my) GitHub Profile Photo -->
+    	<link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/70993217?s=400&amp;u=c252d82e2c57cd011fcbf8a6a89729fcbc9d9026&amp;v=4">
 	</head>
 	<body>
 		<h1>Update Script Content</h1>
