--- a/edit.html
+++ b/edit.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -9,7 +9,7 @@
     	<link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/70993217?s=400&amp;u=c252d82e2c57cd011fcbf8a6a89729fcbc9d9026&amp;v=4">
 	</head>
 	<body>
-		<h1>Update Script Content</h1>
+<!-- 		<h1>Update Script Content</h1>
 
 		<textarea
 			id="nameInput"
@@ -38,7 +38,7 @@
 				// Initial script content
 				console.log("This is the initial script content.");
 			</script>
-		</div>
+		</div> -->
 
 		<script>
 			function updateScript() {
@@ -54,4 +54,4 @@
 			}
 		</script>
 	</body>
-</html> -->
+</html> 
