--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Dynamic Script Content</title>
+		<!-- Favicon grabbed from zdist (my) GitHub Profile Photo -->
+    	<link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/70993217?s=400&amp;u=c252d82e2c57cd011fcbf8a6a89729fcbc9d9026&amp;v=4">
 		<link href="./styles.css" rel="stylesheet" />
 	</head>
 	<body>
