--- a/view.html
+++ b/view.html
@@ -1,13 +1,15 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-	<head>
+<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Dynamic Script Content</title>
+		<!-- Favicon grabbed from zdist (my) GitHub Profile Photo -->
+	    <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/70993217?s=400&amp;u=c252d82e2c57cd011fcbf8a6a89729fcbc9d9026&amp;v=4">
 		<link href="./styles.css" rel="stylesheet" />
 	</head>
 	<body>
-		<h1>Update Script Content</h1>
+<!-- 		<h1>Update Script Content</h1>
 
 		<textarea
 			id="scriptInput"
@@ -23,7 +25,7 @@
 				// Initial script content
 				console.log("This is the initial script content.");
 			</script>
-		</div>
+		</div> -->
 
 		<script>
 			function updateScript() {
@@ -39,4 +41,4 @@
 			}
 		</script>
 	</body>
-</html> -->
+</html>
