--- a/index.html
+++ b/index.html
@@ -7,213 +7,217 @@
 		<link href="./styles.css" rel="stylesheet" />
 	</head>
 	<body>
-		<h1>OT CMP QA</h1>
-		<h3>What is OT CMP QA?</h3>
+		<h1>Onboarding Checklist</h1>
+		<h3>Knowledge Transfer (KT) Guide</h3>
 		<p>
-			In short, OT CMP QA is a lot of acronyms bundled together. Let's
-			break them down.
+			Welcome! This guide is designed to help you understand the key
+			concepts and steps involved in implementing OneTrust's Consent
+			Management Platform (CMP) on a website or application. Follow the
+			checklist below to ensure a smooth onboarding process.
 		</p>
 		<br />
-		<ul>
-			<li><b>OT</b> stands for <b>O</b>ne<b>T</b>rust.</li>
-			<li>
-				<b>CMP</b> stands for <b>C</b>onsent <b>M</b>anagement
-				<b>P</b>latform.
-			</li>
-			<li><b>QA</b> stands for <b>Q</b>uality <b>A</b>ssurance.</li>
-		</ul>
-		<p>
-			OneTrust (<i>OT</i>) is a popular Consent Management Platform
-			(<i>CMP</i>) used by many websites to manage user consent for
-			cookies and data tracking in compliance with privacy regulations
-			like GDPR and CCPA. This page is used to QA (<i>Quality Assurance</i
-			>) the implementation of OneTrust's CMP on a website.
-		</p>
-
-		<table>
-			<thead>
-				<th>Name</th>
-				<th>Body</th>
-				<th>Footer</th>
-			</thead>
-			<tbody>
-				<tr>
-					<th><a href="#">CCPA / US Only</a></th>
-					<td>INSERT SCRIPT HERE</td>
-					<td>INSERT FOOTER HERE</td>
-				</tr>
-				<tr>
-					<th><a href="#">GDPR / EU Only</a></th>
-					<td>INSERT SCRIPT HERE</td>
-					<td>INSERT FOOTER HERE</td>
-				</tr>
-				<tr>
-					<th><a href="#">CCPA + GDPR IAB / US & EU Scoped</a></th>
-					<td>INSERT SCRIPT HERE</td>
-					<td>INSERT FOOTER HERE</td>
-				</tr>
-				<tr>
-					<th><a href="#">Training | Test 1</a></th>
-					<td>INSERT SCRIPT HERE</td>
-					<td>INSERT FOOTER HERE</td>
-				</tr>
-				<tr>
-					<th><a href="#">Training | Test 2</a></th>
-					<td>INSERT SCRIPT HERE</td>
-					<td>INSERT FOOTER HERE</td>
-				</tr>
-			</tbody>
-		</table>
+		<style type="text/css">
+			.tg {
+				border: none;
+				border-collapse: collapse;
+				border-spacing: 0;
+				margin: 0px auto;
+			}
+			.tg td {
+				border-style: solid;
+				border-width: 0px;
+				font-family: Arial, sans-serif;
+				font-size: 14px;
+				overflow: hidden;
+				padding: 10px 5px;
+				word-break: normal;
+			}
+			.tg th {
+				border-style: solid;
+				border-width: 0px;
+				font-family: Arial, sans-serif;
+				font-size: 14px;
+				font-weight: normal;
+				overflow: hidden;
+				padding: 10px 5px;
+				word-break: normal;
+			}
+			.tg .tg-1wig {
+				font-weight: bold;
+				text-align: left;
+				vertical-align: top;
+			}
+			.tg .tg-6t95 {
+				font-weight: bold;
+				position: -webkit-sticky;
+				position: sticky;
+				text-align: center;
+				top: -1px;
+				vertical-align: top;
+				will-change: transform;
+			}
+			.tg .tg-0lax {
+				text-align: left;
+				vertical-align: top;
+			}
+			@media screen and (max-width: 767px) {
+				.tg {
+					width: auto !important;
+				}
+				.tg col {
+					width: auto !important;
+				}
+				.tg-wrap {
+					overflow-x: auto;
+					-webkit-overflow-scrolling: touch;
+					margin: auto 0px;
+				}
+			}
+		</style>
+		<!-- TO DO : Make each chapter have a drop down contianing the topics discussed in each chapter -->
+		<div class="tg-wrap">
+			<table class="tg">
+				<thead>
+					<tr>
+						<th class="tg-6t95">Chapter</th>
+						<th class="tg-6t95">Title</th>
+						<th class="tg-6t95">Priority</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td class="tg-1wig">000</td>
+						<td class="tg-1wig">Access</td>
+						<td class="tg-0lax"></td>
+					</tr>
+					<tr>
+						<td class="tg-0lax">010</td>
+						<td class="tg-0lax">OneTrust Tenants</td>
+						<td class="tg-0lax">Mandatory</td>
+					</tr>
+					<tr>
+						<td class="tg-0lax">020</td>
+						<td class="tg-0lax">My OneTrust</td>
+						<td class="tg-0lax">Mandatory</td>
+					</tr>
+					<tr>
+						<td class="tg-0lax">030</td>
+						<td class="tg-0lax">Accounts</td>
+						<td class="tg-0lax">Mandatory</td>
+					</tr>
+					<tr>
+						<td class="tg-0lax">040</td>
+						<td class="tg-0lax">RPA</td>
+						<td class="tg-0lax">As Needed</td>
+					</tr>
+					<tr>
+						<td class="tg-0lax">050</td>
+						<td class="tg-0lax">Meetings</td>
+						<td class="tg-0lax">As Needed</td>
+					</tr>
+					<tr>
+						<td class="tg-1wig">100</td>
+						<td class="tg-1wig">OneTrust Overview</td>
+						<td class="tg-1wig">Mandatory</td>
+					</tr>
+					<tr>
+						<td class="tg-1wig">200</td>
+						<td class="tg-1wig">Websites</td>
+						<td class="tg-1wig">Mandatory</td>
+					</tr>
+					<tr>
+						<td class="tg-0lax">210</td>
+						<td class="tg-0lax">
+							Scanning &amp; Categorization, Templates &amp;
+							Geolocation Rules, Publishing Scripts
+						</td>
+						<td class="tg-0lax"></td>
+					</tr>
+					<tr>
+						<td class="tg-0lax">220</td>
+						<td class="tg-0lax">Testing Process/Steps</td>
+						<td class="tg-0lax"></td>
+					</tr>
+					<tr>
+						<td class="tg-0lax">230</td>
+						<td class="tg-0lax">CMPQA Testing</td>
+						<td class="tg-0lax"></td>
+					</tr>
+					<tr>
+						<td class="tg-0lax">240</td>
+						<td class="tg-0lax">Test Cases &amp; BRDs</td>
+						<td class="tg-0lax"></td>
+					</tr>
+					<tr>
+						<td class="tg-0lax">241</td>
+						<td class="tg-0lax">
+							TCs &amp; QA Testing a CCPA Site
+						</td>
+						<td class="tg-0lax"></td>
+					</tr>
+					<tr>
+						<td class="tg-0lax">242</td>
+						<td class="tg-0lax">
+							TCs &amp; QA Testing a GDPR Site (+ Cookie Wrapping
+							&amp; Blocking)
+						</td>
+						<td class="tg-0lax"></td>
+					</tr>
+					<tr>
+						<td class="tg-0lax">243</td>
+						<td class="tg-0lax">
+							TCs &amp; QA Testing Special Components
+						</td>
+						<td class="tg-0lax"></td>
+					</tr>
+					<tr>
+						<td class="tg-0lax">250</td>
+						<td class="tg-0lax">
+							Cookie Reports (GDPR Site) &amp; Delta Reports
+						</td>
+						<td class="tg-0lax"></td>
+					</tr>
+					<tr>
+						<td class="tg-1wig">300</td>
+						<td class="tg-1wig">Mobile Apps</td>
+						<td class="tg-1wig">Mandatory</td>
+					</tr>
+					<tr>
+						<td class="tg-0lax">310</td>
+						<td class="tg-0lax">Scanning SDKs</td>
+						<td class="tg-0lax"></td>
+					</tr>
+					<tr>
+						<td class="tg-1wig">400</td>
+						<td class="tg-1wig">CTV Apps</td>
+						<td class="tg-1wig">As Needed</td>
+					</tr>
+					<tr>
+						<td class="tg-1wig">500</td>
+						<td class="tg-1wig">General</td>
+						<td class="tg-1wig"></td>
+					</tr>
+					<tr>
+						<td class="tg-1wig">600</td>
+						<td class="tg-1wig">Assignemnts</td>
+						<td class="tg-1wig">Mandatory</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 
 		<script type="text/javascript">
-			// Adding fake cookies to the Page for testing purposes:
-			const path = "example.com";
-
-			const value1 = "Hello";
-			const value2 = "World";
-			const value3 = "Test";
-			const value4 = "Testing";
-
-			const testCookie1 = "test_cookie1";
-			const cookie1 = (document.cookie =
-				testCookie1 + "=" + value1 + "; path=" + path);
-
-			const testCookie2 = "test_cookie2";
-			const cookie2 = (document.cookie =
-				testCookie2 + "=" + value2 + "; path=" + path);
-
-			const testCookie3 = "test_cookie3";
-			const cookie3 = (document.cookie =
-				testCookie3 + "=" + value3 + "; path=" + path);
-
-			const testCookie4 = "test_cookie4";
-			const cookie4 = (document.cookie =
-				testCookie4 + "=" + value4 + "; path=" + path);
-
-			// Consent Status:
-			var consentStatus = false; // Because this page dosen't take your data. Your welcome.
-
-			// Versioning:
-			var date = new Date();
-			const year = date.getFullYear();
-			const month = (date.getMonth() + 1).toString().padStart(2, "0"); // Months are two digits
-			const day = date.getDay();
-			var bi = 1; // 0 = first half of month, 1 = second half of month
-			switch (true) {
-				case day <= 15:
-					bi = 0;
-					break;
-				case day > 15:
-					bi = 1;
-					break;
-				default:
-					bi = 0;
-			}
-			const version = year + "" + month + "." + bi + "." + "0";
-
-			// Console Logs:
+			// Easter Egg for those that open the console:
 			console.info(
-				"%cWelcome to OT CMP QA Log",
+				"%cWelcome to OT CMP KT Sessions Log",
 				"padding: 8px; background-color: #829cb2; color: white; font-style: italic; border: 1px solid black; font-size: 1.5em;"
 			);
-
-			console.info(
-				"Script is for: %c" + path,
-				"padding: 4px; 6px; font-style: italic; border: 2px solid #829cb2; font-size: 12px;"
-			);
-
-			// Version Info:
-			console.info("Script Version Published: " + version);
-
-			// Consent Model:
-			console.info("The consent model is: " + "custom");
-
-			// Consent Status:
-			console.info(
-				"Consent has " +
-					(consentStatus ? "" : "not") +
-					" been given " +
-					(consentStatus ? "✅" : "❌")
-			);
-
-			// Category Status:
-			console.groupCollapsed("Current Category Status");
-			const categoryStatus = [
-				{
-					CustomGroupId: "1",
-					GroupName: "Strictly Necessary",
-					Status: "Always Active",
-				},
-				{
-					CustomGroupId: "4",
-					GroupName: "Functional",
-					Status: "Inactive",
-				},
-				{
-					CustomGroupId: "6",
-					GroupName: "Information Storage",
-					Status: "Inactive",
-				},
-				{
-					CustomGroupId: "7",
-					GroupName: "Content Selection",
-					Status: "Inactive",
-				},
-				{
-					CustomGroupId: "8",
-					GroupName: "Social Media",
-					Status: "Inactive",
-				},
-			];
-			console.table(categoryStatus, [
-				"CustomGroupId",
-				"GroupName",
-				"Status",
-			]);
-			console.groupEnd();
-
-			// Geolocation & Template Info:
-			const geolocation = "US";
-			const georule = "US";
-			const georuleGroup = "TEST Web US Geo Rule";
-			const templateName = "TEST Web US Template";
-
-			console.groupCollapsed("Geolocation and Template");
-			console.info("The Geolocation is " + geolocation);
-			console.info("The Geolocation rule is " + georule);
-			console.info("The GeolocationRuleGroup is " + georuleGroup);
-			console.info("The TemplateName is " + templateName);
-			console.groupEnd();
-
-			// Cookies Expected to be Blocked:
 			console.groupCollapsed(
-				"The cookies expected to be active if blocking has been implemented are"
-			);
-
-			const blockedCookies = [
-				{ Name: testCookie1, Host: path },
-				{ Name: testCookie2, Host: path },
-				{ Name: testCookie3, Host: path },
-				{ Name: testCookie4, Host: path },
-			];
-			console.table(blockedCookies, ["Name", "Host"]);
-
-			console.groupEnd();
-
-			// Instructions:
-			console.groupCollapsed(
-				"Here you will learn how to implement OT CMP Scripts onto a website."
+				"Here you will learn everything you need to know about how to implement OT CMP onto a website or [Mobile/CTV] application."
 			);
 			console.log(
-				" \u2022 Choose one of the links in the table to get started."
+				" \u2022 Keep your eye out for the Console as there will be additional instructions here to help you familiarize yourself with the browser console."
 			);
-			console.log(
-				" \u2022 I reccomend familiarizing yourself with the first three."
-			);
-			console.log(
-				" \u2022 Test 1 & 2 are for you to learn how to debug common errors found in scripts that have been implemented on websites..."
-			);
-			console.log(" \u2022 Can you find all the errors?");
 			console.groupEnd();
 		</script>
 	</body>
